# ChangeLog for net-misc/youtube-dl
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.251 2013/11/07 16:18:23 jer Exp $

*youtube-dl-2013.11.07 (07 Nov 2013)

  07 Nov 2013; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2013.11.07.ebuild:
  Version bump.

*youtube-dl-2013.11.03 (03 Nov 2013)

  03 Nov 2013; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2013.09.20.1.ebuild,
  -youtube-dl-2013.09.24.2.ebuild, -youtube-dl-2013.09.29.ebuild,
  -youtube-dl-2013.10.01.ebuild, -youtube-dl-2013.10.01.1.ebuild,
  -youtube-dl-2013.10.04.ebuild, -youtube-dl-2013.10.06.ebuild,
  -youtube-dl-2013.10.07.ebuild, -youtube-dl-2013.11.02.ebuild,
  +youtube-dl-2013.11.03.ebuild:
  Version bump.

*youtube-dl-2013.11.02 (02 Nov 2013)

  02 Nov 2013; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2013.11.02.ebuild:
  Version bump.

*youtube-dl-2013.10.30 (30 Oct 2013)

  30 Oct 2013; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2013.10.30.ebuild:
  Version bump.

*youtube-dl-2013.10.29 (29 Oct 2013)

  29 Oct 2013; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2013.10.29.ebuild:
  Version bump.

*youtube-dl-2013.10.28 (28 Oct 2013)

  28 Oct 2013; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2013.10.28.ebuild:
  Version bump.

*youtube-dl-2013.10.23.2 (23 Oct 2013)

  23 Oct 2013; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2013.10.23.2.ebuild:
  Version bump.

*youtube-dl-2013.10.18.2 (19 Oct 2013)

  19 Oct 2013; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2013.10.18.2.ebuild:
  Version bump.

*youtube-dl-2013.10.18.1 (18 Oct 2013)

  18 Oct 2013; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2013.10.18.1.ebuild:
  Version bump.

*youtube-dl-2013.10.17 (17 Oct 2013)

  17 Oct 2013; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2013.10.17.ebuild:
  Version bump.

  15 Oct 2013; Jeroen Roovers <jer@gentoo.org> youtube-dl-2013.10.09.ebuild,
  youtube-dl-2013.10.15.ebuild: