@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile install postinst postrm setup test unpack
+DEPEND=elibc_glibc? ( >=sys-libs/glibc-2.8 ) >=sys-devel/binutils-2.20 sys-devel/gnuconfig >=sys-apps/sed-4 sys-libs/zlib nls? ( sys-devel/gettext ) virtual/libiconv >=dev-libs/gmp-4.3.2 >=dev-libs/mpfr-2.4.2 >=dev-libs/mpc-0.8.1 graphite? ( >=dev-libs/cloog-0.18.0 >=dev-libs/isl-0.11.1 ) >=sys-devel/bison-1.875 >=sys-devel/flex-2.5.4 regression-test? ( >=dev-util/dejagnu-1.4.4 >=sys-devel/autogen-5.5.4 ) gcj? ( gtk? ( x11-libs/libXt x11-libs/libX11 x11-libs/libXtst x11-proto/xproto x11-proto/xextproto =x11-libs/gtk+-2* virtual/pkgconfig amd64? ( multilib? ( app-emulation/emul-linux-x86-gtklibs app-emulation/emul-linux-x86-xlibs ) ) x11-libs/pango ) >=media-libs/libart_lgpl-2.1 app-arch/zip app-arch/unzip )
+DESCRIPTION=The GNU Compiler Collection
+HOMEPAGE=http://gcc.gnu.org/
+IUSE=multislot nls nptl regression-test vanilla altivec cxx fortran nopie nossp doc gcj gtk hardened multilib objc objc-gc mudflap libssp objc++ openmp fixed-point graphite lto go
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~mips ~x86 ~amd64-fbsd ~x86-fbsd
+LICENSE=GPL-3+ LGPL-3+ || ( GPL-3+ libgcc libstdc++ gcc-runtime-library-exception-3.1 ) FDL-1.3+
+PDEPEND=elibc_glibc? ( >=sys-libs/glibc-2.8 ) >=sys-devel/gcc-config-1.7
+RDEPEND=sys-libs/zlib nls? ( sys-devel/gettext ) virtual/libiconv >=dev-libs/gmp-4.3.2 >=dev-libs/mpfr-2.4.2 >=dev-libs/mpc-0.8.1 graphite? ( >=dev-libs/cloog-0.18.0 >=dev-libs/isl-0.11.1 )
+RESTRICT=strip
+SLOT=4.8
+SRC_URI=mirror://gnu/gcc/gcc-4.8.2/gcc-4.8.2.tar.bz2 mirror://gentoo/gcc-4.8.2-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.8.2-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~dirtyepic/dist/gcc-4.8.2-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~halcy0n/patches/gcc-4.8.2-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.8.2-uclibc-patches-1.0.tar.bz2 mirror://gentoo/gcc-4.8.2-patches-1.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.8.2-patches-1.0.tar.bz2 http://dev.gentoo.org/~dirtyepic/dist/gcc-4.8.2-patches-1.0.tar.bz2 http://dev.gentoo.org/~halcy0n/patches/gcc-4.8.2-patches-1.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.8.2-patches-1.0.tar.bz2 mirror://gentoo/gcc-4.8.2-piepatches-v0.5.8.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.8.2-piepatches-v0.5.8.tar.bz2 http://dev.gentoo.org/~dirtyepic/dist/gcc-4.8.2-piepatches-v0.5.8.tar.bz2 http://dev.gentoo.org/~halcy0n/patches/gcc-4.8.2-piepatches-v0.5.8.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.8.2-piepatches-v0.5.8.tar.bz2 mirror://gentoo/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~dirtyepic/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~halcy0n/patches/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.4.3-specs-0.2.0.tar.bz2 gcj? ( ftp://sourceware.org/pub/java/ecj-4.5.jar )
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	fixheadtails	f96922acc9287f1e889a1e50a6c8986e	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	gnuconfig	ee02e61d6c68cee478e2e69214b7caef	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	pax-utils	2424f959506320f5196de8f79fa05297	toolchain	1372dcdee4fc09ede0906452314486bc	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=6c6ed9f2149540d554acd1a6338ab5a0
