@@ -13,6 +13,7 @@ DIST youtube-dl-2013.10.29.tar.gz 441848 SHA256 dfa7e4bc84c6a393019753f002f0e7e1
 DIST youtube-dl-2013.10.30.tar.gz 442771 SHA256 54dd4293975a69c46fadf2948de9226b79a0b524884ef23e96daab307dea792d SHA512 fef73a6efb5f9c589c2dad6dfd35be8dc6ebe24da1b8de866be5ae6c10fa9b73cdc105fe5a4f901a45172f976e73c1c079f053ffb38809930663f96ef6ef3a3c WHIRLPOOL 99afb3c8ed304ce1ae8bd6a00e67cd9e629001fe9788a095e698f104cc7b6a1d7e01e18cf15d59e5205e1a074bc2e4b0341432bb564d4e38a1dde074639addd0
 DIST youtube-dl-2013.11.03.tar.gz 452022 SHA256 652726c77ebbccb580dd4180721a0bb83db0dc83e0ccf4c21a61606755c8fd45 SHA512 6fe1fcea851979d4fec678d9b3cdf602780c3e4354847e7a9247e537be4f983d9f7de72760f1661081f1fbf06d89c02fded7c5254eb56cc4ec85a520e58d27f1 WHIRLPOOL fa522abd17563934d8bdc96338c0bb6ad3092c6128f2c0a6cc84151f2fa2c5e6448a820f514cac34f1c8196468f8e0b04bdc28cc854476d93a106963344aaaf9
 DIST youtube-dl-2013.11.07.tar.gz 455368 SHA256 11537cf289a0ee9eb555647c7743d3989c5e16759ec526b3b31382a2852c8c4b SHA512 ea6bb5e0203f7d9c0c9a8706f9184cf2a25c66c687e2c390526a0d1c367d37771a5a659b41da959c17db317ea26cbb27c7ecf8575ff762b2f531a7f449ea1141 WHIRLPOOL b2f26566731e77ca1ed84bfefbbb2d299d01c0ee635dba6a8f24ed52ad0a688ebd9ee1546f81c37aa33213f0efa2be477394ffddcbca0f633951c04472f6c825
+DIST youtube-dl-2013.11.11.tar.gz 456616 SHA256 a1e3d6ca134abe02fa2e27be184e6dd932554f81d933d8baaa80740d51fd2584 SHA512 e999baffbfb4923f2bb5b905c7b8b88369b833d1a0126e0e818e5b0373f2165bc0dc1c13f383383ca8c2e49e2597abe5431294b8323d00eb341fcffd131f9c0a WHIRLPOOL 8c9b63a8aef9eb1d52c1e13e38d901bb36a8b410800a18227bb642f7aca62ee52527e86fff68872c6f2ee1f41e86eaf47b21450a11f3e7e3e85a93cc84ae64df
 EBUILD youtube-dl-2013.08.02.ebuild 1337 SHA256 824645e6257b3ca5c5637b8ee52a925324cb9917e61c67864223ec3df15ca159 SHA512 5b144559df9d1d08ff98ca0ef8e7549a9e3d2d1b8d4fae56a840078543d110b2f90a8197dcfa4cac6dc2f7319ea32d7687631420392f8a0d94d03307305379d0 WHIRLPOOL c7508da653d0b905136b5b072ad78a637de66e2ffbc16028d46f5601b7a15adefc826d6fe3446933f74a4350080ed6a199dd9ebf82f816f4f5bc2555ec2561eb
 EBUILD youtube-dl-2013.10.09.ebuild 1374 SHA256 6dfdbabd61d32a60a440471b7153d83d1525c3eb5c7ee665e6d4ed78b0ad42b5 SHA512 e060fa3cd790db19c6b423564554eeeae4c92e8953a4304339605623f7861db3d0aca920503f1cdf9d34d3492956c237b73a802797996ddfd86cbd55b50b162f WHIRLPOOL 78e3f081499d14ca89c456d842c9a6ecb967acbfad4d7745c03b2dd562cf38147b8e55c6af85d97d855331c519822fe24fb748dd4a2dba0e737fc3794e3521bb
 EBUILD youtube-dl-2013.10.15.ebuild 1376 SHA256 3fd5a6a014696d252393e719db00bebb59ec0a726304fe29744caed927fde770 SHA512 0665c871ce084e79b93b4514dcf6fac47f79767579fffc10d96cac14dead3810a9e560d474228bed53d12f65344481f494f711cb522189e896506ea4c64711f9 WHIRLPOOL 596d2b208127b8e67b25fc8677f13b92bf00fe9d004716dded15c9d624bba79ee9d52864ec946b2b0e231c45c3496b9b3801b932c0d5679dc2bf6be8ed4b073c
@@ -25,12 +26,13 @@ EBUILD youtube-dl-2013.10.29.ebuild 1394 SHA256 2cfc8cb1550dc31013dfdf09073a930c
 EBUILD youtube-dl-2013.10.30.ebuild 1394 SHA256 a22e1a5ce5fda7f55d8f6ba7dcdc8d3e7c7aaafeea09c8e2ba11f96e2434d54f SHA512 75b8c88fb7289b631cff72677767121b47486dc558c50c3a4c08f80b35cfed03f1d2fd99dc4b525b4618b5556be894e8fe6188bc81e8d421405183ebc7ce1872 WHIRLPOOL ac8799a22c1f985196f800c1f72ef2d2c3c8f7136f738b050f70a1160d1bb4122ace028c6f727a3360aa54ffa3d30e825b0c8c282ba9bdb7abe4f97e4ca78880
 EBUILD youtube-dl-2013.11.03.ebuild 1434 SHA256 b329ab4224da4d10130c8711d0d5a2eea36923fc892bbe1b67004cdb49d83376 SHA512 e5f2bda124bb0ae417a1f44897df8f680a71554c647edaadc7a29b5109d30586c7d2c332d3390ec3287c38217cf96a07e7a8ccead23924c80d12be3472007540 WHIRLPOOL c544c61ffd68fc545f83ee8d74547428fa9f2760042faee041c36037f458c652f69a8fc0302205d3fa52b03979903fb66aa9143c1d9d66b55816be2a8f81b37b
 EBUILD youtube-dl-2013.11.07.ebuild 1434 SHA256 412dfa26504f9056d4753d34d0ee45b80f40532e0904ebec7407df237d64aa81 SHA512 0dfb9c1b8e1d2d9537c40dc4333ada3244911ff6e28ffe1691a294a1f25187ac243ff1144813498029ceda23a06e709531210ef0adcc211135723a8a0903c979 WHIRLPOOL 601fda02fa62d395590a64b30fc9b9b16aff6a21291819ffdb473f8266cda6be3b82d1fe05aebdee2cf34472722da976e8cfa79d136699529fb06859984c0024
-MISC ChangeLog 36331 SHA256 7a15c251fec2b6a3461e7aaad0963fc0db3bc5101977cf6a412b14f1481bb723 SHA512 34d2bec374773aeb8284010ef372bd9217fd09c61d0cd580c17e146375625fd779db55b0208d31ea8642762b6ace194a04aa9be37ca631cbf7e278fb6e5401a7 WHIRLPOOL 6cda1b8a9b14d5e0ac579259ae43baba1236b147c7def2a9b3854b6a59e24a875bf4f6a31aeffc8d77b8909072da18e64ef03bf0d82810fde872f4ebc129beaa
+EBUILD youtube-dl-2013.11.11.ebuild 1434 SHA256 4cc2d8b17992155ab3149cd6b94832fc1952cf648a472573d1e044889ca9a930 SHA512 8eb3ac9d57ee0121178cf70c8f6df2f77a9ecb42043dd7315da35397be39a877cf7706b6e0e1d493ef80d3ff4add33cf293f3113d85241ccd94018421245f394 WHIRLPOOL 13a800ffe7953fbbb566fc25c3289e2087b67dd76fc419d92bae70f768fd2860c7d19d2e38c92a8c7bcf300f7ae58b0ed99abbd55c6ee1a8edca439b6df55348
+MISC ChangeLog 36464 SHA256 224862f6a676e1b11f46d4d91ca4814691b0a11c69074b406d07aef3884dcb52 SHA512 233c12e8dfca2366f660893ae426e808703d0c0e150a54a306342c3520c463a676baaf209208d7312e10600d7482b1f797392a3824ab66ef980bb7fa63b5fcba WHIRLPOOL 8a1b80cf537808abc282636875a1d49bc634c7fe946b5130175ebd6d2f78b6c2a6614c93b9a1579f07c64c81662da641a97f88f49b71c1c63c736796a78363e2
 MISC metadata.xml 274 SHA256 2b4f14b46d21b004377e745db520f7961bc4163b23e6f3d8bbcab508272b1f69 SHA512 acfb3695928ebf2ee87c75f06c7ab47a65f4aa8564b1426ee523a1a5c853ed56df0de4cba186ac003383a27dfa9d21e4f4ff44b48e152c406a918f1b01ca358b WHIRLPOOL 0f245af71a769b0d4eb9bb57a99599a0875ad0373a830ff9e8215a077d3d2f02e916b7b25d275b19b5139810608abddfada68d3d0f2e9191351d26ba716b623b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJ7vVEACgkQVWmRsqeSphOy3QCfaJuCCWkfv9Krem0A9fn2Ht6i
-pDYAniEqkAPlcEi/WrhJRNdHjmbLt95l
-=wUYi
+iEYEAREIAAYFAlKBbD0ACgkQVWmRsqeSphMzWwCfY5tHEnXuhXZNSA4X4bWpG2t9
+tT4AnjpOno8iABhTawyEz1A77d8GBZcg
+=ngwm
 -----END PGP SIGNATURE-----
