@@ -1,6 +1,11 @@
 # ChangeLog for sys-devel/gcc
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.979 2013/11/07 03:29:23 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.980 2013/11/11 23:38:10 dirtyepic Exp $
+
+*gcc-4.8.2 (11 Nov 2013)
+
+  11 Nov 2013; Ryan Hill <dirtyepic@gentoo.org> +gcc-4.8.2.ebuild:
+  Version bump.
 
   07 Nov 2013; Ryan Hill <dirtyepic@gentoo.org> gcc-4.8.0.ebuild:
   Propogate keywords back to 4.8.0.
