@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/youtube-dl
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.251 2013/11/07 16:18:23 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.252 2013/11/11 23:46:03 jer Exp $
+
+*youtube-dl-2013.11.11 (11 Nov 2013)
+
+  11 Nov 2013; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2013.11.11.ebuild:
+  Version bump.
 
 *youtube-dl-2013.11.07 (07 Nov 2013)
 
